--- a/source/client/package.json
+++ b/source/client/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
