--- a/source/client/package.json
+++ b/source/client/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@types/socket.io-client": "^1.4.32",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
+    "js-cookie": "^2.2.1",
+    "qs": "^6.9.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
