--- a/source/server/package.json
+++ b/source/server/package.json
@@ -11,10 +11,13 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
-    "socket.io": "^2.2.0",
-    "redis": "^2.8.0",
+    "multer": "^1.4.2",
     "mysql2": "^1.6.5",
-    "sequelize": "^6.0.0"
+    "redis": "^2.8.0",
+    "sequelize": "^6.0.0",
+    "socket.io": "^2.2.0",
+    "uuid": "^3.3.3"
   }
 }
