--- a/source/client/package.json
+++ b/source/client/package.json
@@ -8,18 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/socket.io-client": "^1.4.32",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "iview": "^3.4.2",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "qs": "^6.9.0",
+    "reflect-metadata": "^0.1.13",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
-    "vue-socket.io": "^3.0.7",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
