--- a/source/client/package.json
+++ b/source/client/package.json
@@ -17,6 +17,7 @@
     "qs": "^6.9.0",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^2.3.0",
+    "v-emoji-picker": "^1.2.6",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
