--- a/source/server/package.json
+++ b/source/server/package.json
@@ -13,6 +13,7 @@
     "gm": "^1.23.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
